--- a/.gitignore
+++ b/.gitignore
@@ -18,6 +18,13 @@
 .env.test.local
 .env.production.local
 
+# dotenv environment variable files
+.env
+.env.development.local
+.env.test.local
+.env.production.local
+.env.local
+
 # font
 *.otf
 *.woff
